tests/failures/missing_semicolon_before_opts.stderr
error: expected `;`
  --> tests/failures/missing_semicolon_before_opts.rs:18:5
   |
18 |     macro_name = my_macro,
   |     ^^^^^^^^^^
